Fixed shadow and dropdown alignment

--- a/css/map.less
+++ b/css/map.less
@@ -222,8 +222,7 @@ div.below-map-text {
 	#dropdown-container {
         width: @infoboxWidth;
 		height: @dropdownHeight;
-		text-align: center;
-		// margin-left: 65px;
+		text-align: right;
 	}
 	/* Filters */
 	#filters-svg {
@@ -266,8 +265,7 @@ div.below-map-text {
 		// width: 155px;
 		height: @dropdownHeight - 4;
 		margin-top: 5px;
-		padding-left: 15px;
-		padding-right: 35px;
+		margin-right: 39px;
 		font-size: @font1Size;
 		// border: 1.5px solid @statesDropdownBorderColor;
 		// border-radius: 0px;
